--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,15 @@ p.copyright {
 
 /* Media queries */
 @media (max-width: 768px) {
+	#wrapper {
+    padding: 0;
+	}
+	#wrapper h1 {
+    margin-top: 30px;
+  }
+  #mc-embedded-subscribe-form {
+    margin-top: 60px;
+	}
 	form.signup input {
 	  width: 100%;
 	}
